<resources>

    <string name="app_name">Smartrac Data Collection</string>
	<string name="gps_service_name">GPS Service</string>
	<string name="acc_service_name">Acceleration Service</string>
	<string name="gps_service_started">GPS Service Started</string>
	<string name="acc_service_started">ACC Service Started</string>
	<string name="notification_title">Prepare your battery</string>
	<string name="notification_message">Smartrac Draining Battery</string>
	<string name="gps_sampling_rate">GPS Sampling Rate</string>
	<string name="gps_file_writing_rate">GPS File Writing Rate</string>
	<string name="acc_sampling_rate">ACC Sampling Rate</string>
	<string name="acc_file_writing_rate">ACC File Writing Rate</string>
	<string name="no_rate">NO</string>
	<string name="one_sec">1s</string>
	<string name="five_sec">5s</string>
	<string name="five_hz">5Hz</string>
	<string name="one_record_per_write">1</string>
	<string name="five_record_per_write">5</string>
	<string name="thirty_record_per_write">30</string>
	<string name="go_to_mode">Continue</string>
	<string name="confirm">Confirm</string>
	<string name="stop">Stop</string>
	<string name="mode_tracking_header">Tracking Note</string>
	<string name="unknown_mode">Unknown</string>
	<string name="walking_mode">Walking</string>
	<string name="bike_mode">Bicycle</string>
	<string name="bus_mode">Bus</string>
	<string name="rail_mode">Rail</string>
	<string name="car_mode">Car</string>
	<string name="wait_mode">Wait</string>
	<string name="dwelling_mode">Dwelling</string>
	<string name="note_hint">Enter note here...</string>
</resources>
