<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mode_tracking_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
    android:id="@+id/mode_tracking_header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
	    <TextView
	        android:id="@+id/mode_tracking_title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_centerHorizontal="true"
	        android:text="@string/mode_tracking_header"
	        android:textAppearance="?android:attr/textAppearanceLarge" />

	    <TextView
	        android:id="@+id/service_monitor"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/mode_tracking_title"/>

	</RelativeLayout>

    <RadioGroup
        android:id="@+id/mode_tracking_modes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/mode_tracking_header">

        <RadioButton
            android:id="@+id/unknown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/unknown_mode" />

        <RadioButton
            android:id="@+id/walk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/walking_mode" />

        <RadioButton
            android:id="@+id/bike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bike_mode" />

        <RadioButton
            android:id="@+id/bus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bus_mode" />

        <RadioButton
            android:id="@+id/rail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rail_mode" />

        <RadioButton
            android:id="@+id/car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/car_mode" />

        <RadioButton
            android:id="@+id/wait"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wait_mode" />

        <RadioButton
            android:id="@+id/dwelling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dwelling_mode" />
    </RadioGroup>

    <Button
        android:id="@+id/update_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/confirm" />

    <Button
        android:id="@+id/stop_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/stop" />

    <ScrollView
        android:id="@+id/mode_tracking_note_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/update_service"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/mode_tracking_modes"
        android:background="@drawable/black_boarder"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" 
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
    		android:focusable="true"
    		android:focusableInTouchMode="true">

            <EditText
                android:id="@+id/mode_tracking_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/note_hint" >

        	</EditText>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>